# Iris_prediction_app

./: .gitignore  README.md  database.db  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: backend-ci.yml
backend/: Dockerfile  requirements.txt
backend/app/: main.py
backend/app/api/: predict.py
backend/app/core/: config.py
backend/app/database/: database.py
backend/app/models/: test_prediction.py  train_model.py
backend/app/schemas/: input_output.py
backend/app/utils/: loader.py
backend/tests/: test_predict.py
frontend/: Dockerfile  app.py  requirements.txt
