[project]
name = "first-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.127.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "scikit-learn>=1.8.0",
    "sqlmodel>=0.0.31",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
]
